Tested snpEff,clinvar-db download with singularity, but local snpEff usd to annotate as heap error with singularity

--- a/config/gadi.config
+++ b/config/gadi.config
@@ -21,9 +21,17 @@ module = 'singularity'
 withName: 'checkInputs' {
 	executor = 'local'
 }
-withName: '' {
-	executor = 'local'
+
+
+
+withName: 'downloadAnnotationDbs' {
+        
+        executor = 'pbspro'
+        queue = 'copyq'
+
+
 }
+
 
 
 withName: 'mutect2' {
@@ -98,6 +106,35 @@ withName: 'getFilteredVariants' {
         time = '6h'
         memory = '80.GB'
 }
+
+
+
+withName: 'annotateWithSnpEff' {
+        executor = 'pbspro'
+        queue = 'normal'
+        cpus = 1
+        time = '1h'
+        memory = '60.GB'
+
+}
+
+withName: 'annotateWithSnpSift' {
+        executor = 'pbspro'
+        queue = 'normal'
+        cpus = 1
+        time = '1h'
+        memory = '60.GB'
+
+}
+
+
+
+
+
+
+
+
+
 
 
 }
