--- a/nextflow.config
+++ b/nextflow.config
@@ -89,10 +89,38 @@ withName: 'mutect2' {
         memory = '80.GB'
     } 
 
-withName: 'getFilteredVariants' {
+  withName: 'getFilteredVariants' {
         cpus = 8
         memory = '80.GB' 
-} 
+   }
+
+
+ withName: 'downloadAnnotationDbs' {
+
+      cpus = 1
+      memory = '20.GB'
+            container = 'quay.io/biocontainers/snpeff:5.2--hdfd78af_0'
+
+}
+
+ withName: 'annotateWithSnpEff' {
+        cpus = 1
+        memory = '60.GB'
+        container = 'quay.io/biocontainers/snpeff:5.2--hdfd78af_0'
+
+
+}
+
+ withName: 'annotateWithSnpSift' {
+        cpus = 1
+        memory = '60.GB'
+        container = 'quay.io/biocontainers/snpeff:5.2--hdfd78af_0'
+
+
+}
+
+
+ 
 
 }
 
