--- a/nextflow.config
+++ b/nextflow.config
@@ -46,77 +46,45 @@ shell = ['/bin/bash', '-euo', 'pipefail']
 // Resources for each process
 // default run resource parameters
 process {
-  container = 'quay.io/biocontainers/gatk4:4.4.0.0--py36hdfd78af_0'
+
+	container = 'quay.io/biocontainers/gatk4:4.4.0.0--py36hdfd78af_0'
+  	cpus = 1
+  	memory = '20.GB'
 
 withName: 'mutect2' {
-        cpus = 8
-        memory = '80.GB'
+        memory = '60.GB'
     }
 
     withName: 'GatherVcfs' {
-        cpus = 8
-        memory = '80.GB'   
+        memory = '60.GB'   
         }
  
 
     withName: 'MergeMutectStats' {
-        cpus = 8
-        memory = '80.GB'
+        memory = '60.GB'
         } 
 
-    withName: 'LearnReadOrientationModel' {
-        cpus = 8
-        memory = '80.GB'
-        } 
-
-  withName: 'GetPileupSummaries_T' {
-        cpus = 8
-        memory = '80.GB'  
-    } 
-
-  withName: 'GetPileupSummaries_N' {
-        cpus = 8
-        memory = '80.GB' 
-    } 
-
-  withName: 'CalculateContamination' {
-        cpus = 8
-        memory = '80.GB'
-    } 
-
-  withName: 'FilterMutectCalls' {
-        cpus = 8
-        memory = '80.GB'
-    } 
 
   withName: 'getFilteredVariants' {
-        cpus = 8
-        memory = '80.GB' 
+        memory = '60.GB' 
    }
 
 
  withName: 'downloadAnnotationDbs' {
 
-      cpus = 1
-      memory = '20.GB'
-            container = 'quay.io/biocontainers/snpeff:5.2--hdfd78af_0'
+        container = 'quay.io/biocontainers/snpeff:5.2--hdfd78af_0'
 
 }
 
  withName: 'annotateWithSnpEff' {
-        cpus = 1
         memory = '60.GB'
-        container = 'quay.io/biocontainers/snpeff:5.2--hdfd78af_0'
-
-
+        //container = 'quay.io/biocontainers/snpeff:5.2--hdfd78af_0'
+	container = 'quay.io/biocontainers/snpeff:5.1d--hdfd78af_0'
 }
 
  withName: 'annotateWithSnpSift' {
-        cpus = 1
         memory = '60.GB'
-        container = 'quay.io/biocontainers/snpeff:5.2--hdfd78af_0'
-
-
+        container = 'quay.io/biocontainers/snpsift:5.1d--hdfd78af_0'
 }
 
 
